syntax = "proto3";
package net.proto;

option java_multiple_files = true;
option java_generate_equals_and_hash = true;
option java_package = "com.musicocracy.fpgk.net.proto";
option java_outer_classname = "BrowseSongsRequestProto";

message BrowseSongsRequest {
    string song_title = 1;
}
